feat: moved sections lab to lab 18

--- a/lab_016.html
+++ b/lab_016.html
@@ -44,9 +44,9 @@
       <h2>Goals</h2>
       <ul>
         <li>Learn what tags, attributes, and elements are</li>
+        <li>Add an <code class="language-html">&lt;!DOCTYPE html&gt;</code> to your personal website</li>
+        <li>Add an <code class="language-html">&lt;html&gt;</code> to your personal website</li>
         <li>Add a <code class="language-html">&lt;body&gt;</code> to your personal website</li>
-        <li>Add a <code class="language-html">&lt;head&gt;</code> to your personal website</li>
-        <li>Add a <code class="language-html">&lt;footer&gt;</code> to your personal website</li>
       </ul>
       <h2>Elements</h2>
       <p><em>Elements</em> refer to the different types of text that make up a webpage. An HTML element looks something
@@ -74,10 +74,11 @@
           class="language-html">&lt;body&gt;</code> tags do with an opening and closing tag. Usually, content can be put
         in between the tags. We'll be going over some of the most common and useful tags, but there are so many tags
         that we can't possibly cover them all.</p>
-      <p>If you want to explore the tags, we suggest going to the official documentation for HTML! <a
+      <p>If you want to explore the tags, we suggest going to the official documentation for HTML: <a
           href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a>
       </p>
-      <p class="note"><strong>Note:</strong> Now would be a good time to stage and commit your changes as we're about to go into a new topic!
+      <p class="note"><strong>Note:</strong> Now would be a good time to stage and commit your changes as we're about to
+        go into a new topic!
       </p>
       <h2>Structure, not Style</h2>
       <p>If you open your browser now and refresh your HTML page, you'll see that nothing has changed. This is because
@@ -87,41 +88,6 @@
       <video class="video" controls>
         <source src="assets/1601.mp4" type="">
       </video>
-      <h2>Heads</h2>
-      <p>Let's add some more structure to your website. While the main content of the your page goes inside it's <code
-          class="language-html">&lt;body&gt;</code>, there is also the <code class="language-html">&lt;head&gt;</code>
-        tag which goes before the <code class="language-html">&lt;body&gt;</code>. The <code
-          class="language-html">&lt;head&gt;</code> contains information <em>about</em> the page which is not
-        visible on the page itself.</p>
-      <p>This includes the <code class="language-html">&lt;title&gt;</code> tag which
-        determines the title of your website, obvious we know. It can also include meta information for search engines
-        to categorize your site with and tags that link your HTML to your CSS styling. For now, add the <code
-          class="language-html">&lt;head&gt;</code> tag before the <code class="language-html">&lt;body&gt;</code>.</p>
-      <p class="note"><strong>Note:</strong> This is above your <code class="language-html">&lt;body&gt;</code> tag, but inside your <code
-          class="language-html">&lt;html&gt;</code> tag.</p>
-      <h2>Nav, Main, and Footer</h2>
-      <p>Inside of the <code class="language-html">&lt;body&gt;</code> tag, content can be split up into a few key
-        areas. There is usually a <code class="language-html">&lt;nav&gt;</code> tag as the first thing inside the body
-        tag.
-        This handles navigation between different pages and where our navbar is usually situated.
-      </p>
-      <p>Next, there is the <code class="language-html">&lt;main&gt;</code> tag. This is where the main content of the
-        <code class="language-html">&lt;body&gt;</code> goes. Finally, there is the <code
-          class="language-html">&lt;footer&gt;</code> which comes after <code class="language-html">&lt;main&gt;</code>.
-        On websites, this is usually where copyright information, privacy notices, etc goes. Add the following tags
-        where they belong!
-      </p>
-      <ul>
-        <li>The <code class="language-html">&lt;nav&gt;</code> tag at the top inside the <code
-            class="language-html">&lt;body&gt;</code> tag</li>
-        <li>The <code class="language-html">&lt;main&gt;</code> tag after the <code
-            class="language-html">&lt;nav&gt;</code> tag</li>
-        <li>Remember to move your text inside your <code class="language-html">&lt;main&gt;</code> tag!</li>
-        <li>The <code class="language-html">&lt;footer&gt;</code> tag after the <code
-            class="language-html">&lt;main&gt;</code></li>
-      </ul>
-      <p class="note"><strong>Note:</strong> Remember, all these tags have an opening and a closing tag. Also, your <code
-          class="language-html">&lt;body&gt;</code> tag should still enclose everything.</p>
       <h2>Attributes</h2>
       <p>Some HTML tags will have what are called <em>attributes</em>. Attributes are extra information you can apply to
         certain tags. One of the main thing they can be used for is to group different HTML tags together in a way that
