--- a/lab_019.html
+++ b/lab_019.html
@@ -50,23 +50,24 @@
       <h2>Paragraph Structuring</h2>
       <p>In your <code>index.html</code>'s <code class="language-html">&lt;body&gt;</code>, add another line:</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="11" data-src="prism/html/1801.html"></pre>
+      <pre class="file line-numbers" data-line="10" data-src="prism/html/1901.html"></pre>
       <p>If you go to your webpage in your browser, you'll see that the text you added does not look the same as in your
         code, on two separate lines.</p>
-      <img class="image" src="assets/1801.png" alt="The text added to the page is not on two separate lines.">
+      <img class="image" src="assets/1901.png" alt="The text added to the page is not on two separate lines.">
       <p>This is because web browsers don't usually take into account the way your code looks. Remember, HTML is all
         about meaning, or <strong>semantics</strong>. This means that if you want there to be two separate blocks of
         text, you need to explicitly code it.</p>
       <p>This is where the <code class="language-html">&lt;p&gt;</code> tag comes in. Wrap each line of text in a <code
           class="language-html">&lt;p&gt;</code> tag.</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-src="prism/html/1802.html" data-line="10-11"></pre>
+      <pre class="file line-numbers" data-src="prism/html/1902.html" data-line="9-10"></pre>
       <p>In the browser, you can now see that the paragraphs are on two separate lines.</p>
-      <img class="image" src="assets/1802.png" alt="The paragraphs added to the page is on two separate lines.">
+      <img class="image" src="assets/1902.png" alt="The paragraphs added to the page is on two separate lines.">
       <p> You can also achieve a line-break using the self-closing <code class="language-html">&lt;br&gt;</code>, or
-          line-break tag, inside of a paragraph tag between text: 
-        <pre><code class="language-html">&lt;p&gt;some text&lt;br&gt;other text&lt;/p&gt;</code></pre>
-        <p><em>However</em>, only use this if the ideas in the paragraph are related. Don't use this as a subsitute for using
+        line-break tag, inside of a paragraph tag between text:
+      <pre><code class="language-html">&lt;p&gt;some text&lt;br&gt;other text&lt;/p&gt;</code></pre>
+      <p><em>However</em>, only use this if the ideas in the paragraph are related. Don't use this as a subsitute for
+        using
         multiple paragraph tags.</p>
       <h2>Emphasis and Breaks</h2>
       <p>So far, all we have is plain text, but there are a couple of ways to emphasize and higlight
@@ -81,8 +82,9 @@
       <p>Get rid of the temporary text in your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>
         and instead write an about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
       </p>
-      <img class="image" src="assets/1803.png" alt="A description or about me about Hack4Impact">
-      <p class="note"><strong>Note:</strong> This is your reminder to commit! If it's been a while, remember you can separate out the staging
+      <img class="image" src="assets/1903.png" alt="A description or about me about Hack4Impact">
+      <p class="note"><strong>Note:</strong> This is your reminder to commit! If it's been a while, remember you can
+        separate out the staging
         and committing of different files.</p>
       <h2>Headings</h2>
       <p>Continuing with text formatting, we have headings! They're exactly what they sound like. There are 6 different
@@ -93,7 +95,7 @@
       <p>At the top of your <code class="language-html">&lt;main&gt;</code>, before your <code
           class="language-html">&lt;p&gt;</code> paragraphs, put an <code class="language-html">&lt;h1&gt;</code> tag.
         Inside, give your home page an appropriate heading. We'll put "hello world!"</p>
-      <img class="image" src="assets/1804.png" alt="A description or about me about Hack4Impact">
+      <img class="image" src="assets/1904.png" alt="A description or about me about Hack4Impact">
       <p>The <code class="language-html">&lt;h1&gt;</code> headings is only be used once as the main heading of a page.
         The other headings can be used as many times as necessary, but always in order. <code
           class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
@@ -101,7 +103,6 @@
         sub-heading of <code class="language-html">&lt;h5&gt;</code> and so on.</p>
       <h3 class="file-heading"><em>headings</em></h3>
       <pre class="file"><h1 class="nostyle">heading 1</h1><h2 class="nostyle">heading 2</h2><h3 class="nostyle">heading 3</h3><h4 class="nostyle">heading 4</h4><h5 class="nostyle">heading 5</h5><h6 class="nostyle">heading 6</h6></pre>
-
 
     </div>
   </main>
