--- a/prism/html/2201.html
+++ b/prism/html/2201.html
@@ -4,9 +4,13 @@
     <title>Personal Website</title>
   </head>
   <body>
-    <nav></nav>
+    <nav class="navbar">
+      <h1 class="logo">
+        <a href="index.html">personal website</a>
+      </h1>
+    </nav>
     <main>
-      <h1>hello world!</h1>
+      <h1 class="page-title">hello world!</h1>
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
