--- a/lab_019.html
+++ b/lab_019.html
@@ -92,11 +92,11 @@
           class="language-html">&lt;h2&gt;</code>, <code class="language-html">&lt;h3&gt;</code>, <code
           class="language-html">&lt;h4&gt;</code>, <code class="language-html">&lt;h5&gt;</code>, and <code
           class="language-html">&lt;h6&gt;</code>.</p>
-      <p>At the top of your <code class="language-html">&lt;main&gt;</code>, before your <code
+      <p>At the top of your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>, before your <code
           class="language-html">&lt;p&gt;</code> paragraphs, put an <code class="language-html">&lt;h1&gt;</code> tag.
         Inside, give your home page an appropriate heading. We'll put "hello world!"</p>
       <img class="image" src="assets/1904.png" alt="A description or about me about Hack4Impact">
-      <p>The <code class="language-html">&lt;h1&gt;</code> headings is only be used once as the main heading of a page.
+      <p>The <code class="language-html">&lt;h1&gt;</code> headings is used once as the main heading of a page.
         The other headings can be used as many times as necessary, but always in order. <code
           class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
           class="language-html">&lt;h2&gt;</code> and <code class="language-html">&lt;h6&gt;</code> should be the
