--- a/lab_020.html
+++ b/lab_020.html
@@ -45,7 +45,7 @@
       <ul>
         <li>Learn about <code class="language-html">&lt;span&gt;</code> and <code
             class="language-html">&lt;div&gt;</code></li>
-        <li>Add <code class="language-html">&lt;div&gt;</code>s to your personal website</li>
+        <li>Add <code class="language-html">&lt;div&gt;</code> to your personal website</li>
       </ul>
       <h2>Generics Containers</h2>
       <p><code class="language-html">&lt;span&gt;</code> and <code class="language-html">&lt;div&gt;</code> are generic
@@ -58,8 +58,8 @@
         from Lab 16, this is so we can reference specific attributes in our CSS and select those specific classes or ids
         for styling.</p>
       <p>The main difference between <code class="language-html">&lt;span&gt;</code> and <code
-          class="language-html">&lt;div&gt;</code> is that <code class="language-html">&lt;span&gt;</code>s are
-        <strong>in-line</strong> while <code class="language-html">&lt;div&gt;</code>s are for blocks of content.
+          class="language-html">&lt;div&gt;</code> is that <code class="language-html">&lt;span&gt;</code> are
+        <strong>in-line</strong> while <code class="language-html">&lt;div&gt;</code> are for blocks of content.
       </p>
       <h2>Add a Div</h2>
       <p>Since we already have text about us on our <code>index.html</code>, we'll make it an about page. Later we can
@@ -85,26 +85,6 @@
       <p class="note"><strong>Note:</strong> The heading on Line 9 stays outside the <code
           class="language-html">&lt;div&gt;</code>. Don't forget the class attribute and attribute value for each one!
       </p>
-      <h2>Add More!</h2>
-      <p>Update the other pages of your website with the new things we've learned about.</p>
-      <ul>
-        <li>Add a <code class="language-html">&lt;h1&gt;</code> heading at the top, inside <code
-            class="language-html">&lt;main&gt;</code> on every page. Give it the <code>class="page-title"</code>
-          attribute.</li>
-        <p class="note"><strong>Note:</strong> We recommend naming it after the page i.e. "blog", "resume", etc.</p>
-        <li>Add a <code class="language-html">&lt;h1&gt;</code> heading at the top, inside <code
-            class="language-html">&lt;nav&gt;</code> on every page. Give it the <code>class="logo"</code> attribute.
-          This will be the large name or logo in the upper left of your website. Feel free to give it some text, your
-          name, etc.</li>
-        <li>In your <code>resume.html</code> page, make a <code class="language-html">&lt;div&gt;</code> inside your
-          <code class="language-html">&lt;main&gt;</code> under your heading. Give it the <code>class="resume"</code>
-          attribute.
-        </li>
-        <li>In your <code>portfolio.html</code> page, make a <code class="language-html">&lt;div&gt;</code> inside your
-          <code class="language-html">&lt;main&gt;</code> under your heading. Give it the <code>class="project"</code>
-          attribute.
-        </li>
-      </ul>
 
     </div>
   </main>
