--- a/lab_021.html
+++ b/lab_021.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 21 - More HTML
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="21">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,15 +37,79 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 21</em>
+        More HTML
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Update your HTML to include new structural and semantic tags</li>
       </ul>
-
+      <h2>Add More!</h2>
+      <p>Update the all the pages of your website with the new things we've learned about and that are in
+        <code>index.html</code>.
+      </p>
+      <ul>
+        <li>Add an <code class="language-html">&lt;h1&gt;</code> heading at the top, inside <code
+            class="language-html">&lt;main&gt;</code> on every page. Give it the <code>class="page-title"</code>
+          attribute.</li>
+        <p class="note"><strong>Note:</strong> We recommend naming it after the page i.e. "blog", "resume", etc.</p>
+        <li>Add an <code class="language-html">&lt;h1&gt;</code> heading at the top, inside <code
+            class="language-html">&lt;nav&gt;</code> on every page. Give it the <code>class="logo"</code> attribute.
+          This will be the large name or logo in the upper left of your website. Give them all the same text, your
+          name, etc.</li>
+        <li>Give all your <code class="language-html">&lt;nav&gt;</code> tags, the <code>class="navbar"</code>
+          attribute.
+        </li>
+         <li>Give all your <code class="language-html">&lt;footer&gt;</code> tags, the <code>class="footer"</code>
+          attribute.
+        </li>
+      </ul>
+      <h2>Update Your Resume</h2>
+      <p>Your resume page will be where a digital version of your resume will be stored! Don't worry if you don't have
+        anything yet, as you go through your academic and professional career, you can always update it!</p>
+      <ul>
+        <li>In your <code>resume.html</code> page, make a <code class="language-html">&lt;div&gt;</code> inside your
+          <code class="language-html">&lt;main&gt;</code> under your heading. Give it the <code>class="resume"</code>
+          attribute.
+        </li>
+        <li>
+          In your <code>resume.html</code> page, give all your <code class="language-html">&lt;section&gt;</code> tags,
+          the <code>class="section"</code> attribute.
+        </li>
+        <li>
+          In your <code>resume.html</code> page, move all your <code class="language-html">&lt;section&gt;</code> tags
+          inside your <code class="language-html">&lt;div class="resume"&gt;</code> tag
+        </li>
+        <li>
+          In your <code>resume.html</code> page, inside each <code class="language-html">&lt;section&gt;</code> tag,
+          put an <code class="language-html">&lt;h2&gt;</code> heading at the top. Give it the
+          <code>class="section-title"</code> attribute.
+        </li>
+        <li>In your <code>resume.html</code> page, inside each <code class="language-html">&lt;h2&gt;</code> tag,
+          give them one of the following: "Education", "Experience", "Skills", "Projects", "Coursework", "Activities",
+          "Awards", "Interests", "References"
+        </li>
+        <p class="note"><strong>Note:</strong> It's recommended you have "Education", but we will be going with
+          "Experience", "Skills", "Projects", and "Coursework" as well. If you want to have all of them, simply add more
+          of the <code class="language-html">&lt;section&gt;</code>, heading, and all!</p>
+      </ul>
+      <h2>Update Your Portfolio</h2>
+      <p>Projects are a great way to show that you've worked through something practical or built something cool. You
+        are already making your first portfolio project, this website! This page is where you can link to and showcase
+        your work.</p>
+      <ul>
+        <li>In your <code>portfolio.html</code> page, make a <code class="language-html">&lt;div&gt;</code> inside your
+          <code class="language-html">&lt;main&gt;</code> under your heading. Give it the <code>class="project"</code>
+          attribute.
+        </li>
+      </ul>
+      <h2>Blog and Contact</h2>
+      <p>We won't be doing much with the blog page in the Starter Pack, but we'll add more to our contact page in a
+        little bit. For now, they should have most of the things <code>index.html</code> has: <code
+          class="language-html">&lt;nav&gt;</code>, <code class="language-html">&lt;body&gt;</code>, <code
+          class="language-html">&lt;main&gt;</code>, <code class="language-html">&lt;footer&gt;</code>, and <code
+          class="language-html">&lt;h1&gt;</code> headings.</p>
 
     </div>
   </main>
